[gd_scene load_steps=9 format=2]

[ext_resource path="res://welder.jpg" type="Texture" id=1]
[ext_resource path="res://Fonts/Font1.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/Card/Card.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
draw_center = false

[sub_resource type="StyleBoxFlat" id=2]
draw_center = false

[sub_resource type="StyleBoxFlat" id=3]
draw_center = false

[sub_resource type="StyleBoxFlat" id=4]
draw_center = false

[sub_resource type="StyleBoxFlat" id=5]
draw_center = false

[node name="Card" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 545.0
margin_bottom = 625.0
rect_pivot_offset = Vector2( 272, 768 )
color = Color( 0.121569, 0.121569, 0.121569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardImage" type="Sprite" parent="."]
position = Vector2( 272, 248 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )
flip_h = true
region_enabled = true
region_rect = Rect2( 0, 1047.49, 2497.23, 1946.44 )

[node name="CardName" type="RichTextLabel" parent="."]
margin_left = 24.0
margin_right = 448.0
margin_bottom = 48.0
custom_fonts/normal_font = ExtResource( 2 )
text = "Weld"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cost" type="RichTextLabel" parent="."]
margin_left = 480.0
margin_right = 520.0
margin_bottom = 48.0
custom_fonts/normal_font = ExtResource( 2 )
text = "1"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="RichTextLabel" parent="."]
margin_left = 40.0
margin_top = 480.0
margin_right = 504.0
margin_bottom = 736.0
custom_fonts/normal_font = ExtResource( 2 )
text = "Use your welder to deal 3 damage"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_right = 544.0
margin_bottom = 624.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
